--- a/package.json
+++ b/package.json
@@ -9,7 +9,22 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+  "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.5.1",
+    "react-dom": "^17.0.1",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "recoil": "^0.1.3",
+    "recoil-logger": "^1.2.0",
+    "web-vitals": "^1.0.1",
+   "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   },
   "author": "",
   "license": "ISC",
@@ -23,7 +38,6 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "concurrently": "^6.0.0",
-    "nodemon": "^2.0.7"
+
   }
 }
